:bug: Fix sidebar overflow

--- a/frontend/src/app/main/ui/dashboard/subscription.scss
+++ b/frontend/src/app/main/ui/dashboard/subscription.scss
@@ -224,7 +224,7 @@
   display: flex;
   border-radius: var(--sp-s);
   flex-direction: column;
-  margin: var(--sp-m);
+  margin: var(--sp-m) var(--sp-m) 0;
   background: var(--color-background-quaternary);
   border: $b-1 solid var(--color-accent-primary-muted);
   padding: var(--sp-l);
@@ -254,7 +254,7 @@
 
 .nitrate-current-plan {
   border-radius: var(--sp-s);
-  margin: 0 var(--sp-m) var(--sp-m) var(--sp-m);
+  margin: var(--sp-m);
   background: var(--color-background-tertiary);
   border: $b-1 solid var(--color-background-quaternary);
   padding: var(--sp-m) var(--sp-l);
